fixed edit icon positions

--- a/magda-web-client/src/Components/Dataset/Add/SlimTextInputWithValidation.scss
+++ b/magda-web-client/src/Components/Dataset/Add/SlimTextInputWithValidation.scss
@@ -17,6 +17,10 @@
         outline: none !important;
     }
 
+    input {
+        padding-right: 40px;
+    }
+
     .edit-icon-container {
         position: absolute;
         display: inline;
