--- a/magda-web-client/src/Components/Dataset/Add/Pages/DatasetAddAccessAndUsePage/index.scss
+++ b/magda-web-client/src/Components/Dataset/Add/Pages/DatasetAddAccessAndUsePage/index.scss
@@ -49,6 +49,9 @@
                 }
                 .edit-icon-container {
                     position: initial;
+                    .edit-icon {
+                        top: 45px !important;
+                    }
                 }
             }
             .license-distribution-option-container {
