--- a/magda-web-client/src/Components/Dataset/Add/Pages/DatasetAddAccessAndUsePage/index.scss
+++ b/magda-web-client/src/Components/Dataset/Add/Pages/DatasetAddAccessAndUsePage/index.scss
@@ -63,22 +63,25 @@
 
                 .fileBlock-file {
                     width: 50%;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
                 }
 
                 .fileBlock-icon {
-                    padding: 0.8em;
-                    vertical-align: -6px;
+                    display: flex;
+                    padding: 0.8em 0.8em 0.8em 1.6em;
                 }
 
                 .fileBlock-control {
-                    padding: 0.5em;
+                    padding-left: 0.8em;
+                    padding-right: 1.6em;
                     flex: 1;
                 }
 
                 .fileBlock-text {
                     display: inline-block;
-                    padding: 1em;
-                    margin-top: 6px;
+                    padding: 0.8em;
                     font-size: 15px;
                     font-weight: normal;
                     font-style: normal;
