style adjustment for licence editor

--- a/magda-web-client/src/Components/Dataset/Add/Pages/DatasetAddAccessAndUsePage/index.scss
+++ b/magda-web-client/src/Components/Dataset/Add/Pages/DatasetAddAccessAndUsePage/index.scss
@@ -49,9 +49,11 @@
                 }
                 .edit-icon-container {
                     position: initial;
-                    .edit-icon {
-                        top: 45px !important;
-                    }
+                }
+            }
+            .invalid {
+                .edit-icon {
+                    top: 45px !important;
                 }
             }
             .license-distribution-option-container {
