Render map after country is selected; helps #2599

--- a/magda-web-client/src/Components/Dataset/Add/SpatialAreaInput/index.scss
+++ b/magda-web-client/src/Components/Dataset/Add/SpatialAreaInput/index.scss
@@ -38,7 +38,7 @@
     }
 
     .tab-content-container {
-        min-height: 380px;
+        min-height: auto;
     }
 
     .bbox-editor-container {
