Mention that state is optional

--- a/magda-web-client/src/Components/Dataset/Add/SpatialAreaInput/index.scss
+++ b/magda-web-client/src/Components/Dataset/Add/SpatialAreaInput/index.scss
@@ -162,6 +162,9 @@
                 color: #484848;
                 margin-bottom: 21px;
             }
+            span {
+                color: #979797;
+            }
         }
 
         .region-select-container {
