--- a/magda-web-client/src/Components/Dataset/View/PublishToCkanButton.scss
+++ b/magda-web-client/src/Components/Dataset/View/PublishToCkanButton.scss
@@ -3,4 +3,34 @@
     display: block;
     width: 100%;
     padding: 0.8rem 1rem;
+    position: relative;
+    .ckan-sync-details-icon {
+        position: absolute;
+    }
+    .ckan-sync-details {
+        position: absolute;
+        line-height: 1.2;
+        font-size: 0.9rem;
+        width: 30rem;
+        background-color: #4b2b85;
+        color: #fff;
+        text-align: left;
+        padding: 7px;
+        left: 10%;
+        border-radius: 4px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+            0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        padding: 12px;
+    }
+    .details-loading-container {
+        position: relative;
+        padding-left: 2px;
+        img {
+            position: absolute;
+        }
+        .details-loading-text {
+            padding-top: 7px;
+            padding-left: 30px;
+        }
+    }
 }
