Add specific css color for recent search items; closes #2658

--- a/magda-web-client/src/Components/Dataset/Search/SearchSuggestionBox.scss
+++ b/magda-web-client/src/Components/Dataset/Search/SearchSuggestionBox.scss
@@ -38,6 +38,9 @@
             width: calc(100% - 50px);
             text-align: left;
             padding: 0px;
+            &.search-item-main-button {
+                color: $search-item-main-button-text;
+            }
             &.markdown {
                 margin-left: 0;
                 em {
