--- a/magda-web-client/src/Components/Dataset/Search/Facets/FacetTemporal.scss
+++ b/magda-web-client/src/Components/Dataset/Search/Facets/FacetTemporal.scss
@@ -7,18 +7,19 @@
         margin-top: 15px;
         width: 20px;
     }
-    .facet-temporal-prompt {
-        background-color: $magda-red;
-        color: $AU-colordark-foreground-text;
-        font-size: 12px;
-        line-height: 14px;
-        font-weight: 400;
-        display: block;
-        position: absolute;
-        padding: 4px 4px;
-        z-index: 2;
-        top: -20px;
-        right: 0;
-        border-radius: 3px;
-    }
+}
+
+.facet-temporal-prompt {
+    background-color: $magda-red;
+    color: $AU-colordark-foreground-text;
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    display: block;
+    position: absolute;
+    padding: 4px 4px;
+    z-index: 2;
+    top: -20px;
+    right: 230px;
+    border-radius: 3px;
 }
