--- a/magda-web-client/src/index.scss
+++ b/magda-web-client/src/index.scss
@@ -1,7 +1,7 @@
 @import "variables";
+// @import "./pancake/sass/core.scss";
 @import "./pancake/sass/pancake.scss";
-html {
-}
+
 body {
     overflow-y: scroll;
     min-width: $minimum;
@@ -9,55 +9,55 @@ body {
 * {
     box-sizing: border-box;
 }
-.au-body .au-grid {
-    p,
-    input,
-    a,
-    span {
-        &::selection {
-            background: $AU-color-foreground-action;
-        }
-    }
-    a {
-        color: $AU-color-foreground-action;
-    }
+// .au-body .au-grid {
+//     p,
+//     input,
+//     a,
+//     span {
+//         &::selection {
+//             background: $AU-color-foreground-action;
+//         }
+//     }
+//     a {
+//         color: $AU-color-foreground-action;
+//     }
 
-    button.au-btn,
-    a.au-btn {
-        background: $AU-colordark-background;
-        color: $AU-colordark-foreground-text;
-    }
+// button.au-btn,
+// a.au-btn {
+//     background: $AU-colordark-background;
+//     color: $AU-colordark-foreground-text;
+// }
 
-    .au-btn.au-btn--primary,
-    a.au-btn.au-btn--primary {
-        background: $AU-colordark-background;
-        color: $AU-colordark-foreground-text;
-        border-color: $AU-color-foreground-action;
-    }
+// .au-btn.au-btn--primary,
+// a.au-btn.au-btn--primary {
+//     background: $AU-colordark-background;
+//     color: $AU-colordark-foreground-text;
+//     border-color: $AU-color-foreground-action;
+// }
 
-    .au-btn.au-btn--tertiary,
-    a.au-btn.au-btn--tertiary {
-        color: $AU-colordark-foreground-focus;
-        background: transparent;
-        border-color: transparent;
-    }
+// .au-btn.au-btn--tertiary,
+// a.au-btn.au-btn--tertiary {
+//     color: $AU-colordark-foreground-focus;
+//     background: transparent;
+//     border-color: transparent;
+// }
 
-    .au-btn.au-btn--secondary,
-    a.au-btn.au-btn--secondary {
-        background: transparent;
-        color: $AU-color-foreground-action;
-    }
+// .au-btn.au-btn--secondary,
+// a.au-btn.au-btn--secondary {
+//     background: transparent;
+//     color: $AU-color-foreground-action;
+// }
 
-    a,
-    button,
-    input,
-    select,
-    textarea {
-        &:focus {
-            outline-color: $AU-colordark-foreground-focus;
-        }
-    }
-}
+// a,
+// button,
+// input,
+// select,
+// textarea {
+//     &:focus {
+//         outline-color: $AU-colordark-foreground-focus;
+//     }
+// }
+// }
 
 //need to add these classes for modals as well
 form > input,
@@ -67,10 +67,10 @@ textarea {
     }
 }
 
-.au-btn:hover:not(:disabled),
-a.au-btn:hover:not(:disabled) {
-    text-decoration: none;
-}
+// .au-btn:hover:not(:disabled),
+// a.au-btn:hover:not(:disabled) {
+//     text-decoration: none;
+// }
 
 .sr-only {
     position: absolute;
@@ -123,13 +123,13 @@ a.au-btn:hover:not(:disabled) {
     }
 }
 
-.au-btn {
-    font-weight: 400;
-    text-transform: none;
-    &:focus {
-        outline: 3px solid $AU-color-foreground-focus;
-    }
-}
+// .au-btn {
+//     font-weight: 400;
+//     text-transform: none;
+//     &:focus {
+//         outline: 3px solid $AU-color-foreground-focus;
+//     }
+// }
 
 button {
     background: transparent;
@@ -142,9 +142,6 @@ button {
         display: inline-block;
         padding-right: 16px;
     }
-}
-
-a {
 }
 
 .tab-navigation {
