--- a/magda-web-client/src/Components/Dataset/Search/Facets/SearchFacets.scss
+++ b/magda-web-client/src/Components/Dataset/Search/Facets/SearchFacets.scss
@@ -122,6 +122,10 @@
     margin: 0;
 }
 
+.btn-facet {
+    @include remove-btn-underline;
+}
+
 .btn-facet-option {
     position: relative;
     width: 100%;
