--- a/magda-web-client/src/_fns.scss
+++ b/magda-web-client/src/_fns.scss
@@ -5,3 +5,13 @@
         @return #ffffff; // Darker background, return light color
     }
 }
+
+@mixin remove-btn-underline() {
+    &.au-btn:hover:not(:disabled) {
+        text-decoration: none;
+    }
+
+    // a.&.au-btn:hover:not(:disabled) {
+
+    // }
+}
