--- a/magda-web-client/src/Components/Dataset/DatasetPage.scss
+++ b/magda-web-client/src/Components/Dataset/DatasetPage.scss
@@ -119,9 +119,14 @@
 }
 
 .distribution-download-button {
-    // background: $AU-color-foreground-action !important;
+    @include remove-btn-underline;
+
     margin-top: 1em;
     margin-bottom: 1em;
+}
+
+.download-button {
+    @include remove-btn-underline;
 }
 
 .au-btn .distribution-button-icon {
