- Added `Add Dataset Link section` - Make sure `files` added from download url won't shown up is local files area

--- a/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
@@ -84,6 +84,15 @@
         border: solid 1px #979797;
     }
 
+    .au-error-text {
+        font-size: 16px;
+        font-size: 1rem;
+        line-height: 1.5;
+        color: #d60000;
+        display: block;
+        margin-bottom: 10px;
+    }
+
     .react-select-with-validation-container {
         .au-error-text {
             font-size: 16px;
