--- a/magda-web-client/src/Components/Dataset/Add/AddDatasetLinkSection.scss
+++ b/magda-web-client/src/Components/Dataset/Add/AddDatasetLinkSection.scss
@@ -15,6 +15,19 @@
             margin-bottom: 50px;
         }
 
+        .link-items-section-heading {
+            margin-top: 55px;
+            h2 {
+                font-size: 24px;
+                font-weight: 500;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 0.88;
+                letter-spacing: -0.3px;
+                color: #484848;
+            }
+        }
+
         input {
             border-radius: 8px;
             border: solid 1px #cccaca;
