--- a/magda-web-client/src/Components/Dataset/Add/DatasetLinkItem.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetLinkItem.scss
@@ -1,13 +1,8 @@
 .dataset-add-file-page {
+    .dataset-link-item-container:not(:first-child) {
+        margin-top: 30px !important;
+    }
     .dataset-link-item-container {
-        // padding: 1em;
-        // max-width: 48em;
-        // border-radius: 5px;
-        // position: relative;
-
-        //display: flex;
-        // justify-content: space-between;
-
         .file-in-progress {
             height: 105px;
             display: flex;
@@ -77,6 +72,137 @@
                                 rgba(65, 49, 87, 0.68),
                                 rgba(65, 49, 87, 0.68)
                             );
+                    }
+                }
+            }
+        }
+
+        .dataset-link-item-complete {
+            position: relative;
+            background-image: url("../../../assets/link-item-box.svg");
+            background-repeat: no-repeat;
+            padding-left: 58px;
+            padding-top: 14px;
+            width: 790px;
+            height: 171px;
+            background-color: #f4f4f4;
+
+            h3 {
+                margin-top: 0px;
+            }
+
+            .edit-button {
+                position: absolute;
+                width: 26px;
+                height: 26px;
+                border: none;
+                left: 740px;
+                top: 5px;
+                padding: 1px 0px 0px 0px;
+
+                border: 1px solid transparent;
+                border-radius: 4px;
+                background-color: transparent !important;
+
+                &:hover {
+                    border: 1px solid #cccaca;
+                }
+            }
+
+            .link-item-title {
+                width: 642px;
+                font-size: 15px;
+                font-weight: normal;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 1.33;
+                letter-spacing: normal;
+                color: #484848;
+
+                text-overflow: ellipsis;
+                overflow-wrap: break-word;
+                white-space: nowrap;
+                overflow: hidden;
+            }
+
+            .link-item-details {
+                div {
+                    width: 645px;
+                    font-size: 13px;
+                    font-weight: 300;
+                    font-stretch: normal;
+                    font-style: normal;
+                    line-height: 1.54;
+                    letter-spacing: normal;
+                    color: #484848;
+
+                    text-overflow: ellipsis;
+                    overflow-wrap: break-word;
+                    white-space: nowrap;
+                    overflow: hidden;
+                }
+                div:last-child {
+                    text-overflow: initial;
+                    white-space: normal;
+                }
+                b {
+                    font-weight: normal;
+                }
+            }
+        }
+
+        .dataset-link-item-edit {
+            position: relative;
+            background-image: url("../../../assets/link-item-box.svg");
+            background-repeat: no-repeat;
+            padding-left: 58px;
+            padding-top: 14px;
+            width: 790px;
+            height: 171px;
+            background-color: #f4f4f4;
+
+            .au-text-input {
+                height: 35px;
+                width: 250px;
+                border-radius: 8px;
+                border: solid 1px #cccaca;
+            }
+
+            .link-item-save-button {
+                position: absolute;
+                z-index: 1;
+                right: 25px;
+                bottom: 18px;
+                background-color: #30384d !important;
+                border-radius: 5px;
+                border: none;
+            }
+
+            .date-editor-wrapper {
+                border: none;
+                .SingleDatePickerInput {
+                    border-radius: 8px;
+                    height: 39px;
+                    border: solid 1px #cccaca;
+                }
+            }
+
+            .description-input-area {
+                padding-top: 8px;
+                .multilineTextEditor-outter-container {
+                    width: 600px;
+                    margin: 0px;
+                    textarea {
+                        height: 60px;
+                        width: 600px;
+                        min-height: 60px;
+                        padding-top: 5px;
+                        padding-bottom: 5px;
+                        padding-left: 10px;
+                    }
+                    .edit-icon {
+                        right: 12px;
+                        top: 32px;
                     }
                 }
             }
