--- a/magda-web-client/src/Components/Dataset/Add/DatasetAddFilesPage.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetAddFilesPage.scss
@@ -45,6 +45,7 @@
     }
     .tip-area {
         bottom: 20px;
+        margin-top: 20px;
         .tooltip-root {
             max-width: none;
             font-size: 16px;
