--- a/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
@@ -103,4 +103,17 @@
             margin-bottom: 10px;
         }
     }
+
+    .au-control-input__text:before,
+    .au-control-input__text:after {
+        width: 23px;
+        height: 23px;
+        top: 3px;
+        left: 3px;
+    }
+
+    .au-control-input__input[type="radio"]:focus
+        + .au-control-input__text:before {
+        box-shadow: none;
+    }
 }
