--- a/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetAddCommon.scss
@@ -106,10 +106,7 @@
 
     .au-control-input__text:before,
     .au-control-input__text:after {
-        width: 23px;
-        height: 23px;
-        top: 3px;
-        left: 3px;
+        border: 9px solid transparent;
     }
 
     .au-control-input__input[type="radio"]:focus
